2012-03-22  Release Manager

	* GCC 4.7.0 released.

2012-03-13  Torvald Riegel  <triegel@redhat.com>

	PR libitm/52526
	* config/linux/rwlock.cc (GTM::gtm_rwlock::read_lock): Fix lost
	wake-up.

2012-03-02  Torvald Riegel  <triegel@redhat.com>

	* libitm.texi: Link to specification and add a usage example.

2012-02-24  Torvald Riegel  <triegel@redhat.com>

	* retry.cc (GTM::gtm_thread::number_of_threads_changed): Change
	default dispatch for more than 1 thread to ml_wt.

2012-02-20  Torvald Riegel  <triegel@redhat.com>

	* method-gl.cc (gl_wt_dispatch::orec): Put on separate cacheline.

2012-02-20  Torvald Riegel  <triegel@redhat.com>

	* method-gl.cc (gl_wt_dispatch::rollback): Optimize memory orders.

2012-02-20  Torvald Riegel  <triegel@redhat.com>

	* method-gl.cc (gl_wt_dispatch::trycommit): Remove handling of
	serial mode corner cases made obsolete by prior gtm_rwlock changes.
	(gl_wt_dispatch.rollback): Same.

2012-02-20  Torvald Riegel  <triegel@redhat.com>

	* method-gl.cc (gl_wt_dispatch::pre_write): Optimize memory orders.

2012-02-20  Torvald Riegel  <triegel@redhat.com>

	* method-gl.cc (gl_wt_dispatch::memtransfer_static): Add missing undo
	for RfW src.  Optimize number of calls to gtm_thr.

2012-02-20  Torvald Riegel  <triegel@redhat.com>

	* beginend.cc (GTM::gtm_thread::begin_transaction): Move serial lock
	acquisition to ...
	* retry.cc (GTM::gtm_thread::decide_begin_dispatch): ... here.
	(default_dispatch): Make atomic.
	(GTM::gtm_thread::set_default_dispatch): Access atomically.
	(GTM::gtm_thread::decide_retry_strategy): Access atomically and
	use decide_begin_dispatch() if default_dispatch might have changed.
	(GTM::gtm_thread::number_of_threads_changed): Initialize
	default_dispatch here.

2012-02-15  Iain Sandoe  <iains@gcc.gnu.org>
	    Patrick Marlier  <patrick.marlier@gmail.com>

	PR libitm/52220
	* alloc_cpp.cc: No dummy definitions for darwin.
	* eh_cpp.cc: Likewise.

2012-02-14  Richard Henderson  <rth@redhat.com>
