@@ -1,3 +1,12 @@
+2012-04-04  H.J. Lu  <hongjiu.lu@intel.com>
+
+	Backported from mainline
+	2012-04-04  H.J. Lu  <hongjiu.lu@intel.com>
+
+	PR libitm/52854
+	* config/x86/target.h (gtm_jmpbuf): Replace long with long long
+	for x86-64.
+
 2012-03-22  Release Manager
 
 	* GCC 4.7.0 released.
